# object_detection_test1

./: common1.py  master.py  object_detection.py  object_detection_web1.py  object_detection_web2.py  pyproject.toml
web/: ajax_master.php  index.php  object_found.php
